--- a/apps/user_app/static/user_app/index.css
+++ b/apps/user_app/static/user_app/index.css
@@ -1,26 +1,81 @@
+
 a{
-	text-decoration: none;
+  text-decoration: none;
 }
 
 #navbar{
-	display: inline-block;
-	width: 100%;
+  display: inline-block;
+  width: 100%;
   height: 40px;
 
 }
 
 #squid{
-	width: 40px;
-	height: 40px;
-	border-radius: 100%;
-	vertical-align: top;
-	margin-bottom: 20px;
-	margin-left: 20px;
-	margin-right: 10px;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  vertical-align: top;
+  margin-bottom: 20px;
+  margin-left: 20px;
+  margin-right: 10px;
 }
 
 #agorean{
-	display: inline-block;
-	font-size: 40px;
-	color: #536177;
+  display: inline-block;
+  font-size: 40px;
+  color: #536177;
 }
+
+#leftside{
+  display: inline-block;
+  width:600px;
+  margin-left: 100px;
+  color: #536177;
+}
+
+  #leftside input{
+    margin: 5px;
+    font-size: 20px;
+    margin-top: 20px;
+    width: 250px;
+    border-style: none;
+  }
+
+  #register{
+    background-color: #6799ff;
+    color: white;
+    border-radius: 5px;
+  }
+
+  #errors{
+    color: red;
+  }
+
+  #rightside{
+    display: inline-block;
+    margin-left: 200px;
+    vertical-align: top;
+    margin-top: -10px;
+    padding: 55px;
+    padding-top: 100px;
+    background-color: #404853;
+    height: 67%;
+  }
+    #rightside input{
+      font-size: 20px;
+      margin: 5px;
+      text-align: center;
+      margin-left: 20px;
+      margin-right: 20px;
+      border-style: none;
+      border-radius: 5px;
+      width: 200px;
+    }
+    #rightside h2{
+      color: white;
+      text-align: center;
+    }
+    #login{
+      background-color:  #6799ff;
+      color: white;
+    }
