added css to profile

--- a/apps/message_app/templates/message_app/about.html
+++ b/apps/message_app/templates/message_app/about.html
@@ -1,5 +1,7 @@
 {% extends 'message_app/navbar.html' %}
 {% block content %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'message_app/about.css' %}">
   <div id = "main">
     <div id = "posts">
       <h1>About Agorean</h1>
