--- a/apps/user_app/static/user_app/user.css
+++ b/apps/user_app/static/user_app/user.css
@@ -2,8 +2,8 @@
   background-color: #404853;
   border-top-style: solid;
   border-width: .5px;
-  height: 150%;
   margin-top: -10px;
+  padding: 10px;
 }
 
 h1{
@@ -12,25 +12,112 @@ h1{
 h3{
   color: #404853;
 }
+
 #bodymain{
   background-color: white;
-  width: 800px;
+  width: 650px;
   margin-top: 20px;
-  margin-left: 225px;
-  padding: 30px;
+  margin-left: 200px;
+  padding: 100px;
   padding-top: 10px;
 }
-#bodymain a{
+#postsuser{
   color: #6799ff;
+  font-weight: bold;
   text-decoration: none;
+  font-size: 20px;
 }
-  #comment{
+
+#postmessage{
+  background-color: #6799ff;
+  font-size: 16px;
+  color: white;
+  float: right;
+  padding: 5px;
+  border-style: none;
+  margin-bottom: 10px;
+  margin-right: 5px;
+}
+  #messageuser{
     display: block;
-    background-color: white;
-    margin-left: 30px;
-    padding: 5px;
+    font-weight: bold;
+    color: #6799ff;
+    text-decoration: none;
+    margin-bottom: 10px;
+  }
+  #tomessage{
+    display: inline-block;
+    width: 640px;
+    font-size: 16px;
+    resize: none;
   }
 
-  #commenttext{
-    margin-left: 30px;
+  #posts{
+    display: inline-block;
+    background-color: white;
+    margin-left: 200px;
+    padding-top: 20px;
+    padding-left: 100px;
+    padding-right: 100px;
+    width: 650px;
   }
+    #singlepost{
+      display: inline-block;
+      background-color: white;
+      margin-bottom: 20px;
+
+      width: 605px;
+      padding: 20px 20px 0px 20px;
+      border-style: solid;
+      border-width: .05px;
+      border-color: #404853;
+    }
+
+    #timestamp{
+      font-size: 12px;
+    }
+
+    #singlemessage{
+      margin-bottom: 10px;
+    }
+
+    #likepost{
+      font-size: 12px;
+      display: inline-block;
+      background-color: #6799ff;
+      color: white;
+      padding: 5px 10px 5px 10px;
+      border-style: none;
+    }
+    #bottompost{
+      display: inline-block;
+      margin-top: 10px;
+      font-style: italic;
+    }
+
+    #comment{
+      display:block;
+      margin-left: 20px;
+      width: 550px;
+      font-size: 15px;
+    }
+    #commentuser{
+      color: #6799ff;
+      text-decoration: none;
+    }
+    #commentaction{
+      margin: 10px;
+      margin-left: 20px;
+    }
+    #writecomment{
+      font-size: 16px;
+      width: 485px;
+    }
+    #postcomment{
+      background-color: #6799ff;
+      border-style: none;
+      color: white;
+      padding: 4px;
+      font-size: 13px;
+      margin-left: -5px;
+    }
