--- a/apps/user_app/templates/user_app/index.html
+++ b/apps/user_app/templates/user_app/index.html
@@ -6,9 +6,8 @@
 </head>
 <body>
   <div id = "navbar">
-  <img id="squid" src="../media/agorean_squid.jpg" alt="">
   <div id="agorean">
-    <a id="agorean" href="{% url 'message_app:index' %}">A G O R E A N</a>
+    <a id="agorean" href=""> <img id="squid" src="../media/agorean_squid.jpg" alt=""> A G O R E A N</a>
   </div>
   </div>
 	<hr>
