completed CSS and HTML for site

--- a/apps/message_app/static/message_app/index.css
+++ b/apps/message_app/static/message_app/index.css
@@ -35,8 +35,10 @@
   }
   #tomessage{
     width: 640px;
+    height: 50px;
     font-size: 16px;
     resize: none;
+    border-radius: 5px;
   }
 
   #posts{
@@ -75,6 +77,7 @@
       padding: 5px 10px 5px 10px;
       border-style: none;
     }
+
     #bottompost{
       display: inline-block;
       margin-top: 10px;
@@ -106,4 +109,23 @@
       padding: 4px;
       font-size: 13px;
       margin-left: -5px;
+    }
+    #delete{
+      font-size: 12px;
+      display: inline-block;
+      background-color: red;
+      color: white;
+      padding: 5px 10px 5px 10px;
+      border-style: none;
+      margin-bottom: 10px;
+    }
+
+    #edit{
+      font-size: 12px;
+      display: inline-block;
+      background-color: #41d117;
+      color: white;
+      padding: 5px 10px 5px 10px;
+      border-style: none;
+      margin-bottom: 10px;
     }
