--- a/apps/message_app/templates/message_app/about.html
+++ b/apps/message_app/templates/message_app/about.html
@@ -1,4 +1,5 @@
 {% extends 'message_app/navbar.html' %}
+{% block page_title %}Agorean | About{% endblock page_title %}
 {% block content %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'message_app/about.css' %}">
