added to database

--- a/apps/user_app/templates/user_app/settings.html
+++ b/apps/user_app/templates/user_app/settings.html
@@ -18,7 +18,7 @@
         <input type="password" name="password" value="{{user.password}}"><br>
         <input id="submit" type="submit" name="" value="Save Changes">
       </form>
-      <a id="delete_account" href="{% url 'user_app:delete' user.id %}">DELETE ACCOUNT</a>
+      <a id="delete_account" href="{% url 'user_app:delete' user.id %}">! DELETE ACCOUNT !</a>
     </div>
   </div>
 {% endblock %}
