--- a/apps/message_app/templates/message_app/navbar.html
+++ b/apps/message_app/templates/message_app/navbar.html
@@ -10,7 +10,8 @@
   <body>
     <div id = "navbar">
     <div id="agorean">
-      <a id="agorean" href="{% url 'message_app:index' %}"> <img id="squid" src="../media/agorean_squid.jpg" alt=""> A G O R E A N</a>
+      <!-- <a id="agorean" href="{% url 'message_app:index' %}"> <img id="squid" src="../media/agorean_squid.jpg" alt=""> -->
+        <a id="agorean" href="{% url 'message_app:index' %}">A G O R E A N</a>
     </div>
     <div id = "rightside">
       <a href="{% url 'message_app:index' %}" class = "navunit">Home</a>
