--- a/apps/user_app/static/user_app/index.css
+++ b/apps/user_app/static/user_app/index.css
@@ -10,20 +10,12 @@ a{
 
 }
 
-#squid{
-  width: 40px;
-  height: 40px;
-  border-radius: 100%;
-  vertical-align: top;
-  margin-bottom: 20px;
-  margin-left: 20px;
-  margin-right: 10px;
-}
 
 #agorean{
   display: inline-block;
   font-size: 40px;
   color: #536177;
+  margin-left: 10px;
 }
 
 #leftside{
@@ -46,8 +38,23 @@ a{
     color: white;
     border-radius: 5px;
   }
+  #squid_errors{
+    margin: -320px -50px 20px 10px;
+    float: right;
+  }
+  #squid{
+    width: 350px;
+    height: 350px;
+    text-align: center;
+    border-radius: 100%;
+    vertical-align: top;
+
+  }
 
   #errors{
+    display: inline-block;
+    width: 300px;
+    float: right;
     color: red;
   }
 
