--- a/apps/user_app/templates/user_app/index.html
+++ b/apps/user_app/templates/user_app/index.html
@@ -1,56 +1,61 @@
 <html>
 <head>
-	<title></title>
-	{% load staticfiles %}
-	<link rel="stylesheet" type="text/css" href="{% static 'user_app/index.css' %}">
+  <title></title>
+  {% load staticfiles %}
+  <link rel="stylesheet" type="text/css" href="{% static 'user_app/index.css' %}">
 </head>
 <body>
   <div id = "navbar">
   <div id="agorean">
-    <a id="agorean" href=""> <img id="squid" src="../media/agorean_squid.jpg" alt=""> A G O R E A N</a>
+    <a id="agorean" href=""> A G O R E A N</a>
   </div>
   </div>
-	<hr>
+  <hr>
 
-	<div id = "leftside">
-		<h2>WANT TO JOIN?</h2>
-		<p>Agorean is a free social media website that you can use to share your stories with the world! Become a member to get in on the action. You can deactivate your account anytime.</p>
-
-    <div id = "errors">
-		{% for message in messages %}
-			{{message}} <br>
-		{% endfor %}
-		</div>
-
-		<form action = "{% url 'user_app:register' %}" method="post">
-			{% csrf_token %}
-			<input type = 'email' name = 'email' placeholder='Email'><br>
-			<input type = 'text' name = 'username' placeholder='Username'><br>
-			<input type = 'text' name = 'first_name' placeholder='First Name'><br>
-			<input type = 'text' name ='last_name' placeholder='Last Name'><br>
-			<input type = 'password' name = 'password' placeholder='Password'><br>
-			<input type = 'password' name = 'confirm_password' placeholder='Confirm Password'><br>
-			<input id = 'register' type = 'submit' value="Let's Go!">
-		</form>
-
-	</div>
+  <div id = "leftside">
+    <h2>WANT TO JOIN?</h2>
+    <p>Agorean is a free social media website that you can use to share your stories with the world! Become a member to get in on the action. You can delete your account anytime.</p>
 
 
-	<div id = "rightside">
+    <form action = "{% url 'user_app:register' %}" method="post">
+      {% csrf_token %}
+      <input type = 'email' name = 'email' placeholder='Email'><br>
+      <input type = 'text' name = 'username' placeholder='Username'><br>
+      <input type = 'text' name = 'first_name' placeholder='First Name'><br>
+      <input type = 'text' name ='last_name' placeholder='Last Name'><br>
+      <input type = 'password' name = 'password' placeholder='Password'><br>
+      <input type = 'password' name = 'confirm_password' placeholder='Confirm Password'><br>
+      <input id = 'register' type = 'submit' value="Let's Go!">
+    </form>
 
-		<div id = "rightinner">
+    <div id = "squid_errors">
 
-		<h2>ALREADY WITH US?</h2>
-		<form action = "{% url 'user_app:login' %}" method="post">
-			{% csrf_token %}
-			<input type = 'email' name = 'email' placeholder = 'Email'><br>
-			<input type = 'password' name = 'password' placeholder = 'Password'><br>
-			<input id ='login' type = 'submit' value = "Log In">
-		</form>
 
-		</div>
+      <div id = "errors">
+        {% for message in messages %}
+          {{message}} <br>
+        {% empty %}
+          <img id="squid" src="../media/agorean_squid.jpg" alt="">
+        {% endfor %}
+      </div>
+    </div>
+  </div>
 
-	</div>
+
+  <div id = "rightside">
+    <div id = "rightinner">
+
+      <h2>ALREADY WITH US?</h2>
+      <form action = "{% url 'user_app:login' %}" method="post">
+        {% csrf_token %}
+        <input type = 'email' name = 'email' placeholder = 'Email'><br>
+        <input type = 'password' name = 'password' placeholder = 'Password'><br>
+        <input id ='login' type = 'submit' value = "Log In">
+      </form>
+
+    </div>
+
+  </div>
 
 
 
