added favicon.ico to title

--- a/apps/user_app/templates/user_app/index.html
+++ b/apps/user_app/templates/user_app/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <title></title>
+  <title>Agorean</title>
+  <link rel="shortcut icon" href="../media/favicon.ico">
   {% load staticfiles %}
   <link rel="stylesheet" type="text/css" href="{% static 'user_app/index.css' %}">
 </head>
