--- a/apps/message_app/static/message_app/navbar.css
+++ b/apps/message_app/static/message_app/navbar.css
@@ -6,7 +6,11 @@ a{
 #navbar{
   display: inline-block;
   width: 100%;
-  height: 20px;
+  height: 50px;
+  padding: -10px;
+  border-bottom: 1px solid grey;
+  background-color: white;
+  margin-bottom: -10px;
 }
 
 #squid{
@@ -28,7 +32,8 @@ a{
 
 #rightside{
   display: inline-block;
-  float: right;
+  position: absolute;
+  margin-left: 580px;
 }
 
 .navunit{
@@ -36,4 +41,10 @@ a{
   color: #6799ff;
   font-size: 20px;
   padding: 10px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
