--- a/apps/message_app/templates/message_app/navbar.html
+++ b/apps/message_app/templates/message_app/navbar.html
@@ -24,5 +24,23 @@
     <hr>
     {% block content %}
     {% endblock %}
+    <script type="text/javascript">
+    window.onscroll = function() {myFunction()};
+
+    // Get the header
+    var navbar = document.getElementById("navbar");
+
+    // Get the offset position of the navbar
+    var sticky = navbar.offsetTop;
+
+    // Add the sticky class to the header when you reach its scroll position. Remove "sticky" when you leave the scroll position
+    function myFunction() {
+      if (window.pageYOffset > sticky) {
+        navbar.classList.add("sticky");
+      } else {
+        navbar.classList.remove("sticky");
+      }
+    }
+  </script>
   </body>
 </html>
