--- a/apps/user_app/static/user_app/user.css
+++ b/apps/user_app/static/user_app/user.css
@@ -29,7 +29,6 @@ h3{
     color: #6799ff;
 }
 
-
 #bodymain{
   background-color: white;
   width: 650px;
@@ -143,17 +142,17 @@ h3{
     #delete{
       font-size: 12px;
       display: inline-block;
-      background-color: red;
-      color: white;
+      float: right;
+      color: #404853;
       padding: 5px 10px 5px 10px;
       border-style: none;
       margin-bottom: 10px;
     }
+
     #edit{
       font-size: 12px;
       display: inline-block;
-      background-color: #41d117;
-      color: white;
+      color: #404853;
       padding: 5px 10px 5px 10px;
       border-style: none;
       margin-bottom: 10px;
