--- a/apps/message_app/static/message_app/edit.css
+++ b/apps/message_app/static/message_app/edit.css
@@ -5,7 +5,7 @@
   background-color: #404853;
   border-top-style: solid;
   border-width: .5px;
-  margin-top: -10px;
+  margin: -10px;
   padding: 10px;
   height: 700px;
 }
