--- a/apps/message_app/static/message_app/navbar.css
+++ b/apps/message_app/static/message_app/navbar.css
@@ -11,6 +11,7 @@ a{
   border-bottom: 1px solid grey;
   background-color: white;
   margin-bottom: -10px;
+  margin-left: -10px;
 }
 
 #squid{
@@ -47,4 +48,7 @@ a{
   position: fixed;
   top: 0;
   width: 100%;
+}
+.sticky + .content {
+  padding-top: 102px;
 }
