--- a/apps/user_app/static/user_app/settings.css
+++ b/apps/user_app/static/user_app/settings.css
@@ -5,7 +5,7 @@
   background-color: #404853;
   border-top-style: solid;
   border-width: .5px;
-  margin-top: -10px;
+  margin: -10px;
   padding: 10px;
   padding-top: 30px;
   height: 700px;
