--- a/apps/user_app/static/user_app/user.css
+++ b/apps/user_app/static/user_app/user.css
@@ -2,7 +2,7 @@
   background-color: #404853;
   border-top-style: solid;
   border-width: .5px;
-  margin-top: -10px;
+  margin: -10px;
   padding: 10px;
 }
 
