added CSS animations to squid

--- a/apps/user_app/templates/user_app/index.html
+++ b/apps/user_app/templates/user_app/index.html
@@ -36,7 +36,7 @@
         {% for message in messages %}
           {{message}} <br>
         {% empty %}
-          <img id="squid" src="../media/agorean_squid.jpg" alt="">
+          <img id="squid" class="bounce" src="../media/agorean_squid.jpg" alt="">
         {% endfor %}
       </div>
     </div>
