--- a/apps/message_app/static/message_app/about.css
+++ b/apps/message_app/static/message_app/about.css
@@ -22,4 +22,19 @@ h1{
   #squid{
     width: 200px;
     height: 200px;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    transform-origin: bottom;
   }
+
+  .bounce {
+        animation-name: bounce;
+        animation-timing-function: ease;
+    }
+
+    @keyframes bounce {
+        0%   { transform: scale(1,1)    translateY(0); }
+        10%  { transform: scale(1.1,.9) translateY(0); }
+        30%  { transform: scale(.9,1.1) translateY(0px); }
+        50%  { transform: scale(1,1)    translateY(0); }
+    }
