--- a/apps/user_app/static/user_app/index.css
+++ b/apps/user_app/static/user_app/index.css
@@ -48,8 +48,24 @@ a{
     text-align: center;
     border-radius: 100%;
     vertical-align: top;
-
+    align-self: flex-end;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    transform-origin: bottom;
   }
+
+  .bounce {
+        animation-name: bounce;
+        animation-timing-function: ease;
+    }
+
+    @keyframes bounce {
+        0%   { transform: scale(1,1)    translateY(0); }
+        10%  { transform: scale(1.1,.9) translateY(0); }
+        30%  { transform: scale(.9,1.1) translateY(0px); }
+        50%  { transform: scale(1,1)    translateY(0); }
+
+    }
 
   #errors{
     display: inline-block;
@@ -61,8 +77,8 @@ a{
   #rightside{
     display: inline-block;
     margin-left: 200px;
-    vertical-align: top;
     margin-top: -10px;
+    vertical-align: top;
     padding: 55px;
     padding-top: 100px;
     background-color: #404853;
