--- a/apps/message_app/static/message_app/index.css
+++ b/apps/message_app/static/message_app/index.css
@@ -1,3 +1,6 @@
+html, body{
+  height: 100%;
+}
 * {
   font-size: 17px;
 }
@@ -5,6 +8,7 @@
   background-color: #404853;
   border-top-style: solid;
   border-width: .5px;
+  height: 100%;
   margin-top: -10px;
   padding: 10px;
   margin: -10px;
