--- a/apps/message_app/static/message_app/popular.css
+++ b/apps/message_app/static/message_app/popular.css
@@ -1,3 +1,7 @@
+html, body{
+  height: 100%
+}
+
 * {
   font-size: 17px;
 }
@@ -5,6 +9,7 @@
   background-color: #404853;
   border-top-style: solid;
   border-width: .5px;
+  height: 100%;
   margin: -10px;
   padding: 10px;
 }
