--- a/apps/user_app/static/user_app/settings.css
+++ b/apps/user_app/static/user_app/settings.css
@@ -1,3 +1,7 @@
+html, body{
+  height: 100%;
+}
+
 * {
   font-size: 17px;
 }
@@ -5,10 +9,10 @@
   background-color: #404853;
   border-top-style: solid;
   border-width: .5px;
+  height: 100%;
   margin: -10px;
   padding: 10px;
   padding-top: 30px;
-  height: 700px;
 }
 
 #main_body{
