--- a/apps/user_app/static/user_app/user.css
+++ b/apps/user_app/static/user_app/user.css
@@ -1,7 +1,12 @@
+html, body{
+  height: 100%;
+}
+
 #main{
   background-color: #404853;
   border-top-style: solid;
   border-width: .5px;
+  height: 100%;
   margin: -10px;
   padding: 10px;
 }
@@ -24,7 +29,12 @@ h3{
   display: inline;
   width: 15px;
   margin-top: 5px;
+  -webkit-animation:spin 4s linear infinite;
+  animation:spin 4s linear infinite;
 }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); }
+}
+
 #settings_words{
     color: #6799ff;
 }
