--- a/apps/user_app/templates/user_app/index.html
+++ b/apps/user_app/templates/user_app/index.html
@@ -13,6 +13,8 @@
   </div>
   <hr>
 
+<div id = "main">
+
   <div id = "leftside">
     <h2>WANT TO JOIN?</h2>
     <p>Agorean is a free social media website that you can use to share your stories with the world! Become a member to get in on the action. You can delete your account anytime.</p>
@@ -57,6 +59,8 @@
     </div>
 
   </div>
+
+</div>
 
 
 
