--- a/apps/message_app/templates/message_app/about.html
+++ b/apps/message_app/templates/message_app/about.html
@@ -8,7 +8,9 @@
       <h1>About Agorean</h1>
       <img id="squid" class="bounce" src="../media/agorean_squid.jpg" alt="">
       <p>Agorean is a social media platform allowing users to share their stories with the world.</p>
-      <p>Put together with Python's Django framework, it was made to allow users to login and/or register to post stories, comment under stories, and like stories. The site also allows users to edit and delete their own posts.</p>
+      <p>Put together with Python's Django framework, it was made to allow users to login
+        and/or register to post stories, comment under stories, and like stories. The
+        site also allows users to edit and delete their own posts and comments.</p>
     </div>
   </div>
 {% endblock %}
