--- a/apps/user_app/static/user_app/index.css
+++ b/apps/user_app/static/user_app/index.css
@@ -1,3 +1,6 @@
+*{
+  font-family: times;
+}
 
 a{
   text-decoration: none;
@@ -59,9 +62,9 @@ a{
     }
 
     @keyframes bounce {
-        0%   { transform: scale(1,1)    translateY(0); }
+        30%   { transform: scale(1,1)    translateY(0); }
         10%  { transform: scale(1.1,.9) translateY(0); }
-        30%  { transform: scale(.9,1.1) translateY(0px); }
+        30%  { transform: scale(.9,1.1) translateY(0); }
         50%  { transform: scale(1,1)    translateY(0); }
     }
 
