fixed several quotation marks

--- a/apps/message_app/templates/message_app/popular.html
+++ b/apps/message_app/templates/message_app/popular.html
@@ -11,7 +11,7 @@
     <div id = "posts">
 
     <h1>Popular Posts</h1>
-    <p id = 'info'>This page features the posts that have generated the most likes.</p>
+    <p id = "info">This page features the posts that have generated the most likes.</p>
     <br>
 
     {% for message in posts %}
