--- a/apps/user_app/templates/user_app/index.html
+++ b/apps/user_app/templates/user_app/index.html
@@ -22,13 +22,13 @@
 
     <form action = "{% url 'user_app:register' %}" method="post">
       {% csrf_token %}
-      <input type = 'email' name = 'email' placeholder='Email'><br>
-      <input type = 'text' name = 'username' placeholder='Username'><br>
-      <input type = 'text' name = 'first_name' placeholder='First Name'><br>
-      <input type = 'text' name ='last_name' placeholder='Last Name'><br>
-      <input type = 'password' name = 'password' placeholder='Password'><br>
-      <input type = 'password' name = 'confirm_password' placeholder='Confirm Password'><br>
-      <input id = 'register' type = 'submit' value="Let's Go!">
+      <input type = "email" name = "email" placeholder="Email"><br>
+      <input type = "text" name = "username" placeholder="Username"><br>
+      <input type = "text" name = "first_name" placeholder="First Name"><br>
+      <input type = "text" name ="last_name" placeholder="Last Name"><br>
+      <input type = "password" name = "password" placeholder="Password"><br>
+      <input type = "password" name = "confirm_password" placeholder="Confirm Password"><br>
+      <input id = "register" type = "submit" value="Let's Go!">
     </form>
 
     <div id = "squid_errors">
@@ -51,9 +51,9 @@
       <h2>ALREADY WITH US?</h2>
       <form action = "{% url 'user_app:login' %}" method="post">
         {% csrf_token %}
-        <input type = 'email' name = 'email' placeholder = 'Email'><br>
-        <input type = 'password' name = 'password' placeholder = 'Password'><br>
-        <input id ='login' type = 'submit' value = "Log In">
+        <input type = "email" name = "email" placeholder = "Email"><br>
+        <input type = "password" name = "password" placeholder = "Password"><br>
+        <input id ="login" type = "submit" value = "Log In">
       </form>
 
     </div>
