--- a/apps/message_app/templates/message_app/edit.html
+++ b/apps/message_app/templates/message_app/edit.html
@@ -2,20 +2,20 @@
 {% block page_title %}Agorean | Edit Post{% endblock page_title %}
 {% block content %}
   {% load static %}
-  <link rel="stylesheet" href="{% static 'message_app/edit.css' %}">
+  <link rel = "stylesheet" href = "{% static 'message_app/edit.css' %}">
 
-  <div id="main">
+  <div id = "main">
     <br>
 
-    <div id="posts">
+    <div id = "posts">
 
       Edit Post <hr>
-      <div id="postsuser">{{message.user.username}}</div><br>
+      <div id = "postsuser">{{message.user.username}}</div><br>
       {{message.created_at}}<hr>
-      <form action="{% url 'message_app:update_information' message.id %}" method="post">
+      <form action = "{% url 'message_app:update_information' message.id %}" method="post">
         {% csrf_token %}
-        <textarea id="tomessage" name="message" rows="8" cols="80">{{message.message}}</textarea>
-        <input id="postmessage" type="submit" name="" value="Update">
+        <textarea id = "tomessage" name = "message" rows = "8" cols = "80">{{message.message}}</textarea>
+        <input id = "postmessage" type = "submit" value = "Update">
       </form>
 
     </div>
